--- a/ansible/roles/base/tasks/userconfig.yml
+++ b/ansible/roles/base/tasks/userconfig.yml
@@ -1,13 +1,13 @@
 ---
 
-- name: ensure group {{ user.group }} exists
+- name: Ensure group {{ user.group }} exists
   group:
     name: "{{ user.group }}"
     state: present
   when: user.name is defined and user.group is defined
 
 
-- name: ensure the user {{ user.name }} exists
+- name: Ensure the user {{ user.name }} exists
   user:
     name: "{{ user.name }}"
     shell: "{{ user.shell }}"
@@ -31,11 +31,13 @@
     src: sudoers
     mode: 0440
 
-- user:
+- name: Create AUR user
+  user:
     name: aur_builder
     group: wheel
 
-- lineinfile:
+- name:  Grant AUR user permissions to run pacman
+  lineinfile:
     path: /etc/sudoers.d/11-install-aur_builder
     line: 'aur_builder ALL=(ALL) NOPASSWD: /usr/bin/pacman'
     create: yes
