--- a/ansible/roles/base/tasks/base.yml
+++ b/ansible/roles/base/tasks/base.yml
@@ -11,7 +11,7 @@
 
 - name: Install base packages
   pacman:
-    name: "{{ base_packages }}"
+    name: "{{ packages.essential }}"
     state: present
   register: task_result
   until: task_result is success
