join essential packages in pacstrap command

--- a/ansible/roles/os-install/tasks/pacstrap.yml
+++ b/ansible/roles/os-install/tasks/pacstrap.yml
@@ -7,7 +7,7 @@
     state: absent
 
 - name: Install essential packages
-  command: "pacstrap {{ arch_root }} {{ packages.essential }}"
+  command: "pacstrap {{ arch_root }} {{ packages.essential | join(' ')}}"
   retries: 3
   delay: 2
   tags: 'pacstrap'
