--- a/ansible/debug.yml
+++ b/ansible/debug.yml
@@ -3,17 +3,11 @@
 - name: Spielplatz
   hosts: localhost
   tasks:
-    - name: Create LUKS container
-      community.crypto.luks_device:
-        device: "/dev/sda2"
-        state: "present"
-        passphrase: "lol"
-        type: luks2
+    - name: Check if there's a SSD
+      command: lsblk --discard -J
+      register: lsblk_info
 
-    - name: close the LUKS container
-      community.crypto.luks_device:
-        device: "/dev/sda2"
-        state: "closed"
-        name: "cryptlvm"
-        passphrase: "g"
+    - debug:
+        msg: "{{lsblk_info.stdout | from_json | json_query('blockdevices.disc-gran') }}"
+
 
