--- a/ansible/roles/network/tasks/main.yml
+++ b/ansible/roles/network/tasks/main.yml
@@ -2,4 +2,6 @@
 
 - import_tasks: hostname.yml
 - import_tasks: hostsfile.yml
-- import_tasks: networkmanager.yml
+- import_tasks: iwd.yml
+- import_tasks: systemd-network.yml
+#- import_tasks: networkmanager.yml
