Update sway config

--- a/ansible/roles/fonts/tasks/main.yml
+++ b/ansible/roles/fonts/tasks/main.yml
@@ -17,3 +17,8 @@
     state: present
   become: yes
   become_user: aur_builder
+
+- name: Copy fontconfig configuration
+  copy:
+    dest: /etc/fonts/local.conf
+    src: local.conf
