--- a/ansible/roles/sway/files/sway/config
+++ b/ansible/roles/sway/files/sway/config
@@ -1,19 +1,11 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
-# Read `man 5 sway` for a complete reference.
 
 ### Variables
 #
-# Logo key. Use Mod1 for Alt.
 set $mod Mod4
-# Home row direction keys, like vim
 set $left h
 set $down j
 set $up k
 set $right l
-# Your preferred terminal emulator
 set $term alacritty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
@@ -26,25 +18,11 @@ set $term alacritty
 #set $menu wofi -s ~/.config/wofi/sway.css -c ~/.config/wofi/menu -I
 set $menu nwggrid
 
-#include "$HOME/.cache/wal/colors-sway"
-
 ### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#output * bg $wallpaper fill
+exec ~/.azotebg
 
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
-#
-# Example configuration:
-#
 exec swayidle -w \
          timeout 300 'swaylock -f -c 000000' \
          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
@@ -55,25 +33,9 @@ exec swayidle -w \
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 ### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
-
-#input * {
-#    xkb_layout "de,gb"
-#}
 input * {
     xkb_layout "de,gb,se"
-    xkb_options grp:alt_caps_toggle 
+    xkb_options grp:alt_caps_toggle
 }
 
 ### Key bindings
@@ -100,21 +62,19 @@ input * {
     bindsym $mod+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
-#    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
-    
-    bindsym $mod+Shift+e exec nwgbar -o 0.2
+    bindsym $mod+Shift+e exec nwgbar -o 0.8
 
-bindsym $mod+Ctrl+alt+l exec swaylock --color "#aa0"
+bindsym $mod+Ctrl+l exec swaylock --config ~/.config/swaylock/config
 
 
-#bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-#bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-#bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-#bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
-bindsym XF86AudioLowerVolume exec amixer set Master 5%-
-bindsym XF86AudioMute exec amixer set Master toggle
+#bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
+#bindsym XF86AudioLowerVolume exec amixer set Master 5%-
+#bindsym XF86AudioMute exec amixer set Master toggle
 
 
 bindsym XF86MonBrightnessDown exec brightnessctl set 10%-
@@ -125,11 +85,9 @@ bindsym XF86MonBrightnessUp exec brightnessctl set +10%
 #bindsym XF86AudioPrev exec playerctl previous
 
 # Take screenshot
-#bindsym Print exec grim
 bindsym print exec grim -g "$(slurp)" - | swappy -f -
 bindsym Shift+print exec grim - | swappy -f -
 
-# exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob
 
 #
 # Moving around:
@@ -158,25 +116,26 @@ bindsym Shift+print exec grim - | swappy -f -
 #
 # Workspaces:
 #
-set $workspace1 "1: "
-set $workspace2 "2:  "
-set $workspace3 "3: "
+set $workspace_terminals 1
+set $workspace_www 2
+set $workspace_coding 3
 
 # Switch to workspace
-    bindsym $mod+1 workspace $workspace1
-    bindsym $mod+2 workspace $workspace2
-    bindsym $mod+3 workspace $workspace3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
-    # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace $workspace1
-    bindsym $mod+Shift+2 move container to workspace $workspace2
-    bindsym $mod+Shift+3 move container to workspace $workspace3
+bindsym $mod+1 workspace number $workspace_terminals
+bindsym $mod+2 workspace number $workspace_www
+bindsym $mod+3 workspace number $workspace_coding
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
+
+# Move focused container to workspace
+    bindsym $mod+Shift+1 move container to workspace number $workspace_terminals
+    bindsym $mod+Shift+2 move container to workspace number $workspace_www
+    bindsym $mod+Shift+3 move container to workspace number $workspace_coding
     bindsym $mod+Shift+4 move container to workspace number 4
     bindsym $mod+Shift+5 move container to workspace number 5
     bindsym $mod+Shift+6 move container to workspace number 6
@@ -184,10 +143,8 @@ set $workspace3 "3: "
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
     bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
 
-assign [class="firefox"] $workspace2 
+assign [class="firefox"] workspace number $workspace_www
 
 #
 # Layout stuff:
@@ -254,54 +211,20 @@ bindsym $mod+r mode "resize"
 #
 # Status Bar:
 #
-# Read `man 5 sway-bar` for more information about this section.
 bar {
     swaybar_command waybar
 }
 
 
-
-#font pango:Linux Libertine 12
-#font pango:DejaVu Sans 12
-font pango:ubuntu 12
+font pango:monospace 16px
 
 exec firefox
-exec --no-startup-id nm-applet
-exec --no-startup-id wal -R -q
 exec gammastep-indicator
 
 
 set $Locker swaylock && sleep 1
 
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
-mode "$mode_system" {
-    bindsym l exec --no-startup-id $Locker, mode "default"
-    bindsym e exec --no-startup-id sway-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
-
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-
-}
-bindsym $mod+Pause mode "$mode_system"
-
 ########## Styling ##########
-
-#set $bg $background
-#set $fg $foreground
-
-# class                 border  backgr.     text        indicator  child_border
-#client.focused          $color0  $bg         $fg         $color7   $bg
-#client.focused_inactive $bg     $bg         $fg         $bg       $bg
-#client.unfocused        $bg     $bg         $fg         $bg       $bg
-#client.urgent           $bg     $bg         $fg         $bg       $bg
-#client.placeholder      $bg     $bg         $fg         $bg       $bg
-#
-#client.background       $background
 
 # Window decoration
 # class                 border  backgr. text    indicator child_border
@@ -312,12 +235,12 @@ client.urgent           #7c818c #bf616a #ffffff #900000   #bf616a
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 
+for_window [class="firefox"] border none
 for_window [app_id="pavucontrol"] floating enable
 
 # Remove application title bars
-default_border none
+#default_border none
 
-#bindsym Mod1+CAPS exec "pkill -SIGRTMIN+1 waybar &"
 
 include /etc/sway/config.d/*
 
