--- a/ansible/roles/sway/files/waybar/config
+++ b/ansible/roles/sway/files/waybar/config
@@ -1,7 +1,6 @@
 {
     "layer": "top", 
     "position": "top", 
-    "height": 24, 
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
     "modules-right": ["pulseaudio", "network", "battery", "tray", "custom/keyboard-layout", "clock"],
@@ -48,7 +47,24 @@
         },
         "on-click": "pavucontrol"
     },
-
+    "sway/workspaces": {
+        "all-outputs": false,
+        "disable-scroll": true,
+        "format": "{icon}",
+        "format-icons": {
+            "1": "", // Icon: terminal
+            "2": "", // Icon: firefox-browser
+            "3": "", // Icon: code
+            "urgent": "",
+            "focused": "",
+            "default": ""
+        },
+	"persistent_workspaces": {
+            "1": ["eDP-1"],
+	    "2": ["DP-1"],
+	    "3": ["DP-1"]
+        }
+    },
     "custom/keyboard-layout": {
       "exec": "~/.config/waybar/kbd_layout.sh",
       "format": "{}", 
