Fix typo in fonts

--- a/ansible/roles/fonts/tasks/main.yml
+++ b/ansible/roles/fonts/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Install fonts
   pacman:
     name:
-      - text-gyre-fonts
+      - tex-gyre-fonts
       - ttf-dejavu
       - ttf-linux-libertine
       - ttf-hack
