--- a/ansible/roles/sway/files/waybar/config
+++ b/ansible/roles/sway/files/waybar/config
@@ -3,8 +3,7 @@
     "position": "top", 
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "network", "battery", "tray", "custom/keyboard-layout", "clock"],
-
+    "modules-right": ["pulseaudio", "network", "battery", "battery#2", "tray", "custom/keyboard-layout", "clock"],
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
@@ -24,6 +23,15 @@
         "format": "{icon}",
         "format-icons": ["", "", "", "", ""]
     },
+    "battery#2": {
+            "bat": "BAT0",
+            "states": {
+                "warning": 30,
+                "critical": 15
+            },
+            "format": "{icon}",
+            "format-icons": ["", "", "", "", ""]
+        },
     "network": {
         "format-wifi": "",
 	"tooltip-format-wifi": "{essid} ({signalStrength}%)",
@@ -50,7 +58,7 @@
     "sway/workspaces": {
         "all-outputs": false,
         "disable-scroll": true,
-        "format": "{icon}",
+        "format": "{name}:{icon}",
         "format-icons": {
             "1": "", // Icon: terminal
             "2": "", // Icon: firefox-browser
@@ -61,8 +69,8 @@
         },
 	"persistent_workspaces": {
             "1": ["eDP-1"],
-	    "2": ["DP-1"],
-	    "3": ["DP-1"]
+	        "2": ["DP-1"],
+	        "3": ["DP-1"]
         }
     },
     "custom/keyboard-layout": {
