--- a/ansible/roles/sway/files/sway/config
+++ b/ansible/roles/sway/files/sway/config
@@ -145,6 +145,7 @@ bindsym $mod+0 workspace number 10
     bindsym $mod+Shift+0 move container to workspace number 10
 
 assign [class="firefox"] workspace number $workspace_www
+assign [class="jetbrains-idea"] workspace number $workspace_coding
 
 #
 # Layout stuff:
@@ -236,6 +237,7 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 
 for_window [class="firefox"] border none
+for_window [class="jetbrains-idea"] border none
 for_window [app_id="pavucontrol"] floating enable
 
 # Remove application title bars
