--- a/ansible/roles/sway/files/sway/config
+++ b/ansible/roles/sway/files/sway/config
@@ -238,6 +238,7 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 
 for_window [class="firefox"] border none
 for_window [class="jetbrains-idea"] border none
+for_window [class="jetbrains-idea" title="win0"] floating enable
 for_window [app_id="pavucontrol"] floating enable
 
 # Remove application title bars
