Always start kanshi

--- a/ansible/roles/sway/files/sway/config
+++ b/ansible/roles/sway/files/sway/config
@@ -223,6 +223,8 @@ exec firefox
 exec gammastep-indicator
 exec autotiling
 
+exec_always kanshi
+
 set $Locker swaylock && sleep 1
 
 ########## Styling ##########
