--- a/ansible/roles/yubikey/tasks/main.yml
+++ b/ansible/roles/yubikey/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Install YubiKey Personalization GUI
-  pacman: name=yubikey-personalization-gui state=present
+  pacman: 
+    name: yubikey-personalization-gui 
+    state: present
 
 - name: Install smartcard libs/tools
   pacman:
