Format code with prettier

--- a/ansible/configure.yml
+++ b/ansible/configure.yml
@@ -1,36 +1,34 @@
 ---
-
 - name: Customise a basic arch linux installation
   hosts: localhost
   user: root
   vars_prompt:
     - name: macgyves_password
-      prompt: 'macgyves password'
+      prompt: "macgyves password"
       private: yes
       encrypt: "sha512_crypt"
       confirm: yes
   vars:
     ansible_become_pass: "{{ macgyves_password }}"
   roles:
-    - { role: network, tags: 'network' }
+    - { role: network, tags: "network" }
     - base
-    - { role: shell, tags: 'shell' }
-    - { role: dev-tools, tags: 'dev-tools' }
-    - { role: firewall, tags: 'firewall' }
-    - { role: ssd, tags: 'ssd' }
-    - { role: alacritty, tags: 'alacritty' }
-    - { role: sway, tags: 'sway' }
-    - { role: bluetooth, tags: 'bluetooth' }
-    - { role: themes, tags: 'themes' }
-    - { role: yubikey, tags: 'yubikey' }
-    - { role: office, tags: 'office' }
+    - { role: shell, tags: "shell" }
+    - { role: dev-tools, tags: "dev-tools" }
+    - { role: firewall, tags: "firewall" }
+    - { role: ssd, tags: "ssd" }
+    - { role: alacritty, tags: "alacritty" }
+    - { role: sway, tags: "sway" }
+    - { role: bluetooth, tags: "bluetooth" }
+    - { role: themes, tags: "themes" }
+    - { role: yubikey, tags: "yubikey" }
+    - { role: office, tags: "office" }
   tasks:
     - name: Install more packages
       pacman:
         name: "{{ packages.more }}"
         state: present
-      tags: 'install-packages'
-
+      tags: "install-packages"
 # Grafikkartentreiber
 #idea
 # git-extras
@@ -45,8 +43,6 @@
 # localectl set-x11-keymap sv-latin1
 # git config
 # git signing config
-
-
 
 # security
 # https://wiki.archlinux.org/index.php/Docker
