--- a/ansible/roles/facts/tasks/device_uuids.yml
+++ b/ansible/roles/facts/tasks/device_uuids.yml
@@ -1,12 +1,10 @@
 ---
-
 - name: Gathering hardware facts
   setup:
     gather_subset:
-      - '!all'
-      - '!min'
+      - "!all"
+      - "!min"
       - hardware
-
 
 - name: Save LUKS device UUID in fact
   set_fact:
