--- a/ansible/roles/shell/tasks/main.yml
+++ b/ansible/roles/shell/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Install antibody (zsh plugin manager)
   aur:
     name: antibody
@@ -11,7 +10,7 @@
 - name: Copy zsh_plugins
   copy:
     dest: "/home/{{ user.name }}/.zsh_plugins.txt"
-    src: '.zsh_plugins.txt'
+    src: ".zsh_plugins.txt"
   become: yes
   become_user: "{{ user.name }}"
 
@@ -23,14 +22,13 @@
 - name: Copy .zshrc
   copy:
     dest: "/home/{{ user.name }}/.zshrc"
-    src: '.zshrc'
+    src: ".zshrc"
   become: yes
   become_user: "{{ user.name }}"
 
 - name: Copy .zlogin
   copy:
     dest: "/home/{{ user.name }}/.zlogin"
-    src: '.zlogin'
+    src: ".zlogin"
   become: yes
   become_user: "{{ user.name }}"
-
