--- a/ansible/roles/themes/tasks/main.yml
+++ b/ansible/roles/themes/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Install nordic gtk3 theme
   aur:
     name: nordic-theme-git
@@ -23,4 +22,4 @@
 - name: Copy gtk3 settings
   copy:
     dest: "/home/{{ user.name }}/.config/gtk-3.0/settings.ini"
-    src: 'gtk-3.0/settings.ini'
+    src: "gtk-3.0/settings.ini"
