--- a/ansible/roles/shell/tasks/main.yml
+++ b/ansible/roles/shell/tasks/main.yml
@@ -9,26 +9,18 @@
 
 - name: Copy zsh_plugins
   copy:
-    dest: "/home/{{ user.name }}/.zsh_plugins.txt"
+    dest: "~/.zsh_plugins.txt"
     src: ".zsh_plugins.txt"
-  become: yes
-  become_user: "{{ user.name }}"
 
 - name: Generate .zsh_plugins.sh for static loading
   shell: "antibody bundle < ~/.zsh_plugins.txt > ~/.zsh_plugins.sh"
-  become: yes
-  become_user: "{{ user.name }}"
 
 - name: Copy .zshrc
   copy:
-    dest: "/home/{{ user.name }}/.zshrc"
+    dest: "~/.zshrc"
     src: ".zshrc"
-  become: yes
-  become_user: "{{ user.name }}"
 
 - name: Copy .zlogin
   copy:
-    dest: "/home/{{ user.name }}/.zlogin"
+    dest: "~/.zlogin"
     src: ".zlogin"
-  become: yes
-  become_user: "{{ user.name }}"
