--- a/ansible/roles/alacritty/tasks/main.yml
+++ b/ansible/roles/alacritty/tasks/main.yml
@@ -1,19 +1,16 @@
 ---
 - name: Install alacritty
+  become: yes
   pacman:
     name: alacritty
     state: present
 
 - name: Ensure alacritty config folder exists
   file:
-    path: "/home/{{ user.name }}/.config/alacritty/"
+    path: "~/.config/alacritty"
     state: directory
-    owner: "{{ user.name }}"
-    mode: 0750
 
 - name: Copy alacritty config file
   copy:
-    dest: "/home/{{ user.name }}/.config/alacritty/alacritty.yml"
+    dest: "~/.config/alacritty/alacritty.yml"
     src: "alacritty.yml"
-    owner: "{{ user.name }}"
-    mode: 0600
