--- a/ansible/roles/base/tasks/base.yml
+++ b/ansible/roles/base/tasks/base.yml
@@ -1,18 +1,12 @@
 ---
 - name: Perform full system upgrade
+  become: true
   pacman:
     update_cache: yes
     upgrade: yes
-  register: task_result
-  until: task_result is success
-  retries: 3
-  delay: 2
 
 - name: Install base packages
+  become: true
   pacman:
     name: "{{ packages.essential }}"
     state: present
-  register: task_result
-  until: task_result is success
-  retries: 3
-  delay: 2
