--- a/ansible/roles/office/tasks/vdirsyncer.yml
+++ b/ansible/roles/office/tasks/vdirsyncer.yml
@@ -12,17 +12,17 @@
 
 - name: Ensure systemd user directory (~/.config/systemd/user) exists
   file:
-    path: "/home/{{ user.name }}/.config/systemd/user"
+    path: "~/.config/systemd/user"
     state: directory
 
 - name: Ensure vdirsyncer.service systemd unit is installed
   copy:
-    dest: "/home/{{ user.name }}/.config/systemd/user"
+    dest: "~/.config/systemd/user"
     src: .config/systemd/user/vdirsyncer.service
 
 - name: Ensure vdirsyncer.timer systemd unit is installed
   copy:
-    dest: "/home/{{ user.name }}/.config/systemd/user"
+    dest: "~/.config/systemd/user"
     src: .config/systemd/user/vdirsyncer.timer
 
 - name: Enable vdirsyncer timer
