--- a/ansible/roles/plasma/tasks/main.yml
+++ b/ansible/roles/plasma/tasks/main.yml
@@ -1,36 +1,40 @@
 ---
 - name: Install sddm
+  become: yes
   pacman:
     name:
       - sddm
-    #      - sddm-kcm
     state: present
 
 - name: Enable sddm
+  become: yes
   systemd:
     name: sddm.service
-    #    state: started
     enabled: yes
 
 - name: Assert sddm.conf.d config directory exists
+  become: yes
   file:
     path: /etc/sddm.conf.d
     state: directory
     mode: 0755
 
 - name: Activate autologin
+  become: yes
   template:
     dest: /etc/sddm.conf.d/autologin.conf
     src: autologin.conf.j2
     mode: 644
 
 - name: sddm theme
+  become: yes
   copy:
     dest: /etc/sddm.conf.d/theme.conf
     src: theme.conf
     mode: 644
 
 - name: Install plasma
+  become: yes
   pacman:
     name:
       - plasma-desktop
