--- a/ansible/roles/themes/tasks/main.yml
+++ b/ansible/roles/themes/tasks/main.yml
@@ -8,18 +8,17 @@
   become_user: aur_builder
 
 - name: Install papirus icon theme
+  become: yes
   pacman:
     name: papirus-icon-theme
     state: present
 
 - name: Create gtk3 settings directory
   file:
-    path: "/home/{{ user.name }}/.config/gtk-3.0"
+    path: "~/.config/gtk-3.0"
     state: directory
-    owner: "{{ user.name }}"
-    mode: 0750
 
 - name: Copy gtk3 settings
   copy:
-    dest: "/home/{{ user.name }}/.config/gtk-3.0/settings.ini"
+    dest: "~/.config/gtk-3.0/settings.ini"
     src: "gtk-3.0/settings.ini"
